Added sql to TicketService